--- a/gb/20/7/1/n12223530.md
+++ b/gb/20/7/1/n12223530.md
@@ -1,28 +1,28 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dcubgz363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dcubgz363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dcubgz363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dcubgz363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dcubgz363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dcubgz363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dcubgz363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dcubgz363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dcubgz363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dcubgz363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dcubgz363/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dcubgz363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dcubgz363/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dcubgz363/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dcubgz363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共病毒疫情尚在 搭机旅行安全吗</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1249746897.jpg" />
 <h6>6月15日，一架飞机从杜塞尔多夫飞往西班牙度假地。这是解封后第一架飞机。(Pool/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年07月05日讯】（大纪元记者夏雨综合报导）飞行可能会增加感染<ahref="https://github.com/dcubgz363/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>的风险，但航空公司正在采取一些预防措施，乘客自己也可以采取一些方法保护自己。</p>
-<p><ahref="https://github.com/dcubgz363/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>大流行导致各国实施居家令，封锁边境，航空旅行大幅度下降，但仍有一些人因各种原因而不得不<ahref="https://github.com/dcubgz363/djy/blob/master/gb/tag/%E6%90%AD%E6%9C%BA.md#1">搭机</a>旅行。</p>
+	<p>【大纪元2020年07月05日讯】（大纪元记者夏雨综合报导）飞行可能会增加感染<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>的风险，但航空公司正在采取一些预防措施，乘客自己也可以采取一些方法保护自己。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>大流行导致各国实施居家令，封锁边境，航空旅行大幅度下降，但仍有一些人因各种原因而不得不<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%90%AD%E6%9C%BA.md#1">搭机</a>旅行。</p>
 <p>乘飞机旅行意味着将在机场、飞机等公共场所逗留，和相当一部分人待在一起。且随着旅行慢慢恢复，飞机也会变得越来越拥挤，意味着你可能与他人坐在一起几个小时，或许会增加感染中共病毒的风险。</p>
 <h2>搭飞机难以保证社交疏离</h2>
 <p>克利夫兰诊所肺部和重症监护医师约瑟夫·哈布巴扎（Joseph Khabbaza）也是治疗中共病毒患者的医生，他对“今日美国”表示，由于飞机的配置，与其它形式的旅行相比，乘飞机接触病毒的机会较多。</p>
 <p>他说：“一旦进入机舱，你就不知道飞机上还有谁。”“你与陌生人的距离相对更近。”“你可能不得不坐在别人附近（比建议的6英尺社交距离更近），有时要坐几个小时。”</p>
 <p>但他也说，由于航空公司所做的改变，飞行比大流行病初期要安全得多。</p>
-<figure id="attachment_12178408" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1218748865.jpg"><img class="size-large wp-image-12178408" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1218748865-600x405.jpg" alt="" width="600" b="405" /></a><figcaption class="wp-caption-text">2020年6月9日，英国伦敦，盖特威克机场（Gatwick Airport）的工作人员正在消毒扶手。(Chris J Ratcliffe/Getty Images)</figcaption></figure>
+<figure id="attachment_12178408" aria-describedby="caption-attachment-12178408" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1218748865.jpg"><img class="size-large wp-image-12178408" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1218748865-600x405.jpg" alt="" width="600" b="405" /></a><figcaption id="caption-attachment-12178408" class="wp-caption-text">2020年6月9日，英国伦敦，盖特威克机场（Gatwick Airport）的工作人员正在消毒扶手。(Chris J Ratcliffe/Getty Images)</figcaption></figure>
 <h2>航空公司想方设法减少病毒传播</h2>
 <p>美国疾病控制和预防中心（CDC）表示，一旦进入飞机，大多数病毒和其它细菌由于舱内空气的流通方式，从而难以通过空气传播。航空公司也表示，他们正在集中精力对乘客经常接触的坚硬表面进行消毒。</p>
 <p>阿拉斯加、达美航空、捷蓝航空和西南航空等美国一些航空公司正在限制飞机上乘客数量，或者禁卖中间座位。</p>
 <p>美国航空、美联航和精神航空现在正在尽可能满负荷飞行。美国所有主要的航空公司都要求乘客戴口罩。</p>
 <p>对于航空旅行和所有其它类型的旅行，疾病预防控制中心建议乘客勤洗手，保持社交距离并戴上口罩。</p>
 <p>几家美国航空公司已经宣布，他们将询问旅客可能的COVID-19症状，以及在前两周内是否曾与中共病毒测试呈阳性的人接触。</p>
-<figure id="attachment_12226244" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/000_1TF6B2.jpg"><img class="wp-image-12226244 size-large" src="https://i.epochtimes.com/assets/uploads/2020/07/000_1TF6B2-600x389.jpg" alt="" width="600" b="389" /></a><figcaption class="wp-caption-text">对飞机消毒。 (Photo by GIL COHEN-MAGEN / AFP)</figcaption></figure>
+<figure id="attachment_12226244" aria-describedby="caption-attachment-12226244" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/000_1TF6B2.jpg"><img class="wp-image-12226244 size-large" src="https://i.epochtimes.com/assets/uploads/2020/07/000_1TF6B2-600x389.jpg" alt="" width="600" b="389" /></a><figcaption id="caption-attachment-12226244" class="wp-caption-text">对飞机消毒。 (Photo by GIL COHEN-MAGEN / AFP)</figcaption></figure>
 <h2>带上洗手液和湿巾</h2>
-<p>对乘客来说，<ahref="https://github.com/dcubgz363/djy/blob/master/gb/tag/%E6%90%AD%E6%9C%BA.md#1">搭机</a>旅行可以带上自己的洗手液。TSA放宽了对洗手液的液体容量规定，允许旅客携带最大12盎司的洗手液容器，而不是以往随身携带的3.4盎司限值。</p>
+<p>对乘客来说，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%90%AD%E6%9C%BA.md#1">搭机</a>旅行可以带上自己的洗手液。TSA放宽了对洗手液的液体容量规定，允许旅客携带最大12盎司的洗手液容器，而不是以往随身携带的3.4盎司限值。</p>
 <p>乘客最好也带上抗菌擦拭布，用来擦拭座椅、托盘桌和扶手等。</p>
 <h2>自备食物和饮料</h2>
 <p>不想触摸飞机上提供的零食或航空公司的饮料杯，也不想去机场商店或餐厅（也许一些机场内商店目前处于关门状态），自带食物和一个空水瓶在机场装满水是合理的选择。</p>
@@ -31,42 +31,47 @@
 <p>使用智能手机提前通过航空公司的移动应用程序办理登机手续，然后将登机牌直接保存到手机中。或通过航空公司网站办理登机手续并打印登机牌。无论哪种方式，您都可以避免在机场排队等候check-in。</p>
 <p>此外，选择靠窗的座位可减少和人接触的机会。</p>
 <p><a src="https://player.cnbc.com/p/gZWlPC/cnbc_global?playertype=synd&amp;byGuid=7000143873" width="560" b="349" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
-<p>责任编辑：李寰宇#</p>
+<p>责任编辑：李寰宇#◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/6/30/n12220711.md#1">【最新疫情6.30】美股2季度创下十年最佳表现</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/6/30/n12220958.md#1">中国现新型猪流感病毒 恐变异引发人传人</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/6/30/n12222449.md#1">英首相对国安法表关切 称华为是敌对国供应商</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/5/n12233242.md#1">老夫妻双双染疫而亡 医护促临终牵手</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/30/n12220711.md#1">【最新疫情6.30】美股2季度创下十年最佳表现</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/30/n12220958.md#1">中国现新型猪流感病毒 恐变异引发人传人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/30/n12222449.md#1">英首相对国安法表关切 称华为是敌对国供应商</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679893.md#1">洛市警局：洛克奥斯卡典礼挨打 未指控史密斯</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/6/n11093693.md#1" target="_blank">林辉：“口吞红太阳”与“领袖最脏”罪</a></li><li><a href="https://github.com/dcubgz363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">共产暴政录：儿子告发母亲致其母被处决</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/3/n12231315.md#1">【新闻看点】习近平“我将无我”？中共末路狂奔</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/3/n12231038.md#1">大陆山寨口罩现身台湾 被当场退货</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/3/n12230648.md#1">大陆有调兵备粮迹象 官员：怕回大饥荒年代</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/3/n12230848.md#1">英国公布首批入境免隔离国家名单 台湾上榜</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/3/n12230907.md#1">应对近期两大社会热点 中共对媒体下密令</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/3/n12230960.md#1">国安恶法逼出港人创意 《愿荣光》变数字歌</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/2/n12228161.md#1">被问平生拍电影何时了 周星驰痛快回答获爆赞</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/2/n12226849.md#1">刘亦菲撑港警 韩市民团体抵制《花木兰》</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/3/n12231338.md#1">产妇难产急救无效 新生宝宝一举动让妈妈醒了</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/6/12/n12180144.md#1">2020庚子年+日食带大周期  预兆中共亡</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/7/3/n12229948.md#1">犹太拉比：中共为邪恶之首 或引发末世战争</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/6/29/n12220541.md#1">【佳人传】最像林黛玉的江南才女叶小鸾</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/5/23/n12131413.md#1">【馨香雅句】为何韩国越南兴起汉字复活</a></li>
-<li><a href="https://github.com/dcubgz363/djy/blob/master/gb/20/6/24/n12209058.md#1">趋吉避凶凭善念 幸逢相士术通神</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dcubgz363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dcubgz363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/1/n12223530.htm">中共病毒疫情尚在 搭机旅行安全吗</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/1/n12223530.htm">中共病毒疫情尚在 搭机旅行安全吗</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dcubgz363/djy/blob/master/gb/20/7/1/n12223530.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dcubgz363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dcubgz363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dcubgz363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dcubgz363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcubgz363/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/7/1/n12223530.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
